--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,7 +1,7 @@
 # Copyright 2022 Catalogic Software
 # See LICENSE file for licensing details.
 
-name: CloudCasa
+name: cloudcasa
 display-name: CloudCasa
 docs: https://discourse.charmhub.io/t/cloudcasa-docs-index/6926
 description: CloudCasa is a powerful and easy-to-use backup service for protecting Kubernetes, cloud databases, and cloud native applications 
