--- a/metadata.yaml
+++ b/metadata.yaml
@@ -5,7 +5,13 @@ name: cloudcasa
 display-name: CloudCasa
 docs: https://discourse.charmhub.io/t/cloudcasa-docs-index/6926
 description: CloudCasa is a powerful and easy-to-use backup service for protecting Kubernetes, cloud databases, and cloud native applications 
-summary: CloudCasa charmed operator
+summary: Data protection tool
+website: https://cloudcasa.io
+source: https://github.com/catalogicsoftware/cloudcasa-charm
+issues: https://github.com/catalogicsoftware/cloudcasa-charm/issues
+maintainers:
+  - Raghu Devarakonda <raghu@catalogicsoftware.com>
+  - Nitish Sharma <nsharma@catalogicsoftware.com>
 tags:
   - cloudcasa 
 containers:
