--- a/.github/ci.yaml
+++ b/.github/ci.yaml
@@ -1,5 +1,12 @@
 name: Tests
-on: [pull_request, push]
+
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   lint:
