--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ commands =
       --skip {toxinidir}/docs
     pylint -E {[vars]src_path}
     # pflake8 wrapper supports config from pyproject.toml
-    pflake8 {[vars]all_path} --ignore=D100,E265,E302
+    pflake8 --ignore=D100,E265,E302 {[vars]all_path}
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
 
