added ignore to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ commands =
       --skip {toxinidir}/docs
     pylint -E {[vars]src_path}
     # pflake8 wrapper supports config from pyproject.toml
-    pflake8 --ignore=E501,D100,D101,D102,D107,D104 {[vars]all_path}
+    pflake8 --ignore=E303,E305,E501,D100,D101,D102,D107,D104 {[vars]all_path}
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
 
