Revert "Update ci.yaml"
This reverts commit 5581c1de19b7644e9714724f06bf2561b53e4b99.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,8 @@ jobs:
         uses: charmed-kubernetes/actions-operator@main
         with:
           provider: microk8s
+          # this creates the right model for our charm.
+          bootstrap-options: "--default-model=cloudcasa-system"
       - name: Run integration tests
         # set a predictable model name so it can be consumed by charm-logdump-action
         run: tox -e integration -- --model cloudcasa-system
