Remove flake8 exclusions and fix all linter errors

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,9 @@ skipsdist=True
 skip_missing_interpreters = True
 envlist = lint, unit
 
+[flake8]
+max-line-length = 99
+
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
@@ -52,7 +55,7 @@ commands =
       --skip {toxinidir}/docs
     pylint -E {[vars]src_path}
     # pflake8 wrapper supports config from pyproject.toml
-    pflake8 --ignore=E303,E305,E501,D100,D101,D102,D107,D104,D204,W293 {[vars]all_path}
+    pflake8 {[vars]all_path}
     isort --check-only --diff {[vars]all_path}
 
 [testenv:unit]
